--- a/Raindrop-blog/pom.xml
+++ b/Raindrop-blog/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>Raindrop-framework</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
